--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,133 +27,67 @@ dist.jar=${dist.dir}/JavaUtil.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.com.springsource.antlr-2.7.7.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/com.springsource.antlr-2.7.7.jar
-file.reference.com.springsource.javax.servlet-2.5.0.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/com.springsource.javax.servlet-2.5.0.jar
-file.reference.com.springsource.javax.servlet.jsp-2.1.0.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/com.springsource.javax.servlet.jsp-2.1.0.jar
-file.reference.com.springsource.javax.servlet.jsp.jstl-1.1.2.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/com.springsource.javax.servlet.jsp.jstl-1.1.2.jar
-file.reference.com.springsource.net.sf.cglib-2.2.0.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/com.springsource.net.sf.cglib-2.2.0.jar
-file.reference.com.springsource.org.aopalliance-1.0.0.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/com.springsource.org.aopalliance-1.0.0.jar
-file.reference.com.springsource.org.apache.taglibs.standard-1.1.2.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/com.springsource.org.apache.taglibs.standard-1.1.2.jar
-file.reference.com.springsource.org.aspectj.weaver-1.6.8.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/com.springsource.org.aspectj.weaver-1.6.8.RELEASE.jar
-file.reference.commons-beanutils-1.9.2.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/commons-beanutils-1.9.2.jar
-file.reference.commons-codec-1.9.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/commons-codec-1.9.jar
-file.reference.commons-collections-3.2.1.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/commons-collections-3.2.1.jar
-file.reference.commons-dbcp2-2.0.1.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/commons-dbcp2-2.0.1.jar
-file.reference.commons-digester-2.1.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/commons-digester-2.1.jar
-file.reference.commons-fileupload-1.3.1.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/commons-fileupload-1.3.1.jar
-file.reference.commons-io-2.4.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/commons-io-2.4.jar
-file.reference.commons-jexl-2.1.1.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/commons-jexl-2.1.1.jar
-file.reference.commons-lang3-3.3.2.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/commons-lang3-3.3.2.jar
-file.reference.commons-logging-1.1.3.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/commons-logging-1.1.3.jar
-file.reference.commons-pool2-2.2.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/commons-pool2-2.2.jar
-file.reference.cxf-2.4.2.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/cxf-2.4.2.jar
-file.reference.dom4j-1.6.1.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/dom4j-1.6.1.jar
-file.reference.ehcache-2.8.3.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/ehcache-2.8.3.jar
-file.reference.fastjson-1.1.41.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/fastjson-1.1.41.jar
-file.reference.geronimo-jaxws_2.2_spec-1.2.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/geronimo-jaxws_2.2_spec-1.2.jar
-file.reference.hibernate-jpa-2.0-api-1.0.0.Final.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/hibernate-jpa-2.0-api-1.0.0.Final.jar
-file.reference.hibernate3.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/hibernate3.jar
-file.reference.httpclient-4.0.3.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/httpclient-4.0.3.jar
-file.reference.httpcore-4.0.1.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/httpcore-4.0.1.jar
-file.reference.javassist-3.12.0.GA.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/javassist-3.12.0.GA.jar
-file.reference.jaxb-api-2.2.11.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/jaxb-api-2.2.11.jar
-file.reference.jaxen-1.1-beta-6.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/jaxen-1.1-beta-6.jar
-file.reference.json.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/json.jar
-file.reference.jta-1.1.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/jta-1.1.jar
-file.reference.jxls-core-1.0.5.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/jxls-core-1.0.5.jar
-file.reference.kaptcha-2.3.2.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/kaptcha-2.3.2.jar
-file.reference.log4j-1.2.17.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/log4j-1.2.17.jar
-file.reference.mysql-connector-java-5.1.29-bin.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/mysql-connector-java-5.1.29-bin.jar
-file.reference.neethi-3.0.1.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/neethi-3.0.1.jar
-file.reference.Oracle10g__jdbc.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/Oracle10g__jdbc.jar
-file.reference.org.springframework.aop-3.1.4.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/org.springframework.aop-3.1.4.RELEASE.jar
-file.reference.org.springframework.asm-3.1.4.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/org.springframework.asm-3.1.4.RELEASE.jar
-file.reference.org.springframework.beans-3.1.4.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/org.springframework.beans-3.1.4.RELEASE.jar
-file.reference.org.springframework.context-3.1.4.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/org.springframework.context-3.1.4.RELEASE.jar
-file.reference.org.springframework.core-3.1.4.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/org.springframework.core-3.1.4.RELEASE.jar
-file.reference.org.springframework.expression-3.1.4.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/org.springframework.expression-3.1.4.RELEASE.jar
-file.reference.org.springframework.jdbc-3.1.4.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/org.springframework.jdbc-3.1.4.RELEASE.jar
-file.reference.org.springframework.orm-3.1.4.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/org.springframework.orm-3.1.4.RELEASE.jar
-file.reference.org.springframework.transaction-3.1.4.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/org.springframework.transaction-3.1.4.RELEASE.jar
-file.reference.org.springframework.web-3.1.4.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/org.springframework.web-3.1.4.RELEASE.jar
-file.reference.org.springframework.web.servlet-3.1.4.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/org.springframework.web.servlet-3.1.4.RELEASE.jar
-file.reference.poi-3.10-FINAL-20140208.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/poi-3.10-FINAL-20140208.jar
-file.reference.poi-ooxml-3.10-FINAL-20140208.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/poi-ooxml-3.10-FINAL-20140208.jar
-file.reference.slf4j-api-1.6.6.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/slf4j-api-1.6.6.jar
-file.reference.slf4j-nop-1.6.6.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/slf4j-nop-1.6.6.jar
-file.reference.spring-security-config-3.1.0.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/spring-security-config-3.1.0.RELEASE.jar
-file.reference.spring-security-core-3.1.0.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/spring-security-core-3.1.0.RELEASE.jar
-file.reference.spring-security-web-3.1.0.RELEASE.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/spring-security-web-3.1.0.RELEASE.jar
-file.reference.sqljdbc4.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/sqljdbc4.jar
-file.reference.ueditor-1.1.1.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/ueditor-1.1.1.jar
-file.reference.wsdl4j-1.6.2.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/wsdl4j-1.6.2.jar
-file.reference.xmlschema-core-2.0.jar=/Users/fuq/work/Netbeans/wxin/WebContent/WEB-INF/lib/xmlschema-core-2.0.jar
+file.reference.dom4j-1.6.1.jar=lib/dom4j-1.6.1.jar
+file.reference.httpclient-4.0.3.jar=lib/httpclient-4.0.3.jar
+file.reference.httpcore-4.0.1.jar=lib/httpcore-4.0.1.jar
+file.reference.IKAnalyzer3.1.1Stable.jar=lib/IKAnalyzer3.1.1Stable.jar
+file.reference.InfoExtract.jar=lib/InfoExtract.jar
+file.reference.itext-2.0.4.jar=lib/itext-2.0.4.jar
+file.reference.iTextAsian.jar=lib/iTextAsian.jar
+file.reference.iTextAsianCmaps.jar=lib/iTextAsianCmaps.jar
+file.reference.jaxen-1.1-beta-6.jar=lib/jaxen-1.1-beta-6.jar
+file.reference.jcommon-1.0.21.jar=lib/jcommon-1.0.21.jar
+file.reference.jfreechart-1.0.17-swt.jar=lib/jfreechart-1.0.17-swt.jar
+file.reference.jfreechart-1.0.17.jar=lib/jfreechart-1.0.17.jar
+file.reference.json.jar=lib/json.jar
+file.reference.log4j-1.2.15.jar=lib/log4j-1.2.15.jar
+file.reference.mail.jar=lib/mail.jar
+file.reference.nekohtml.jar=lib/nekohtml.jar
+file.reference.poi-3.9-20121203.jar=lib/poi-3.9-20121203.jar
+file.reference.poi-excelant-3.9-20121203.jar=lib/poi-excelant-3.9-20121203.jar
+file.reference.poi-ooxml-3.9-20121203.jar=lib/poi-ooxml-3.9-20121203.jar
+file.reference.poi-ooxml-schemas-3.9-20121203.jar=lib/poi-ooxml-schemas-3.9-20121203.jar
+file.reference.poi-scratchpad-3.9-20121203.jar=lib/poi-scratchpad-3.9-20121203.jar
+file.reference.pushlet-2.0.4.jar=lib/pushlet-2.0.4.jar
+file.reference.servlet-api.jar=lib/servlet-api.jar
+file.reference.stax-api-1.0.1.jar=lib/stax-api-1.0.1.jar
+file.reference.xalan.jar=lib/xalan.jar
+file.reference.xercesImpl.jar=lib/xercesImpl.jar
+file.reference.xmlbeans-2.3.0.jar=lib/xmlbeans-2.3.0.jar
+file.reference.xom-1.2.6.jar=lib/xom-1.2.6.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.com.springsource.antlr-2.7.7.jar}:\
-    ${file.reference.com.springsource.javax.servlet-2.5.0.jar}:\
-    ${file.reference.com.springsource.javax.servlet.jsp-2.1.0.jar}:\
-    ${file.reference.com.springsource.javax.servlet.jsp.jstl-1.1.2.jar}:\
-    ${file.reference.com.springsource.net.sf.cglib-2.2.0.jar}:\
-    ${file.reference.com.springsource.org.aopalliance-1.0.0.jar}:\
-    ${file.reference.com.springsource.org.apache.taglibs.standard-1.1.2.jar}:\
-    ${file.reference.com.springsource.org.aspectj.weaver-1.6.8.RELEASE.jar}:\
-    ${file.reference.commons-beanutils-1.9.2.jar}:\
-    ${file.reference.commons-codec-1.9.jar}:\
-    ${file.reference.commons-collections-3.2.1.jar}:\
-    ${file.reference.commons-dbcp2-2.0.1.jar}:\
-    ${file.reference.commons-digester-2.1.jar}:\
-    ${file.reference.commons-fileupload-1.3.1.jar}:\
-    ${file.reference.commons-io-2.4.jar}:\
-    ${file.reference.commons-jexl-2.1.1.jar}:\
-    ${file.reference.commons-lang3-3.3.2.jar}:\
-    ${file.reference.commons-logging-1.1.3.jar}:\
-    ${file.reference.commons-pool2-2.2.jar}:\
-    ${file.reference.cxf-2.4.2.jar}:\
+    ${file.reference.IKAnalyzer3.1.1Stable.jar}:\
+    ${file.reference.InfoExtract.jar}:\
     ${file.reference.dom4j-1.6.1.jar}:\
-    ${file.reference.ehcache-2.8.3.jar}:\
-    ${file.reference.fastjson-1.1.41.jar}:\
-    ${file.reference.geronimo-jaxws_2.2_spec-1.2.jar}:\
-    ${file.reference.hibernate-jpa-2.0-api-1.0.0.Final.jar}:\
-    ${file.reference.hibernate3.jar}:\
-    ${file.reference.httpclient-4.0.3.jar}:\
-    ${file.reference.httpcore-4.0.1.jar}:\
-    ${file.reference.javassist-3.12.0.GA.jar}:\
-    ${file.reference.jaxb-api-2.2.11.jar}:\
+    ${file.reference.iTextAsian.jar}:\
+    ${file.reference.iTextAsianCmaps.jar}:\
+    ${file.reference.itext-2.0.4.jar}:\
     ${file.reference.jaxen-1.1-beta-6.jar}:\
+    ${file.reference.jcommon-1.0.21.jar}:\
+    ${file.reference.jfreechart-1.0.17-swt.jar}:\
+    ${file.reference.jfreechart-1.0.17.jar}:\
     ${file.reference.json.jar}:\
-    ${file.reference.jta-1.1.jar}:\
-    ${file.reference.jxls-core-1.0.5.jar}:\
-    ${file.reference.kaptcha-2.3.2.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.mysql-connector-java-5.1.29-bin.jar}:\
-    ${file.reference.neethi-3.0.1.jar}:\
-    ${file.reference.Oracle10g__jdbc.jar}:\
-    ${file.reference.org.springframework.aop-3.1.4.RELEASE.jar}:\
-    ${file.reference.org.springframework.asm-3.1.4.RELEASE.jar}:\
-    ${file.reference.org.springframework.beans-3.1.4.RELEASE.jar}:\
-    ${file.reference.org.springframework.context-3.1.4.RELEASE.jar}:\
-    ${file.reference.org.springframework.core-3.1.4.RELEASE.jar}:\
-    ${file.reference.org.springframework.expression-3.1.4.RELEASE.jar}:\
-    ${file.reference.org.springframework.jdbc-3.1.4.RELEASE.jar}:\
-    ${file.reference.org.springframework.orm-3.1.4.RELEASE.jar}:\
-    ${file.reference.org.springframework.transaction-3.1.4.RELEASE.jar}:\
-    ${file.reference.org.springframework.web-3.1.4.RELEASE.jar}:\
-    ${file.reference.org.springframework.web.servlet-3.1.4.RELEASE.jar}:\
-    ${file.reference.poi-3.10-FINAL-20140208.jar}:\
-    ${file.reference.poi-ooxml-3.10-FINAL-20140208.jar}:\
-    ${file.reference.slf4j-api-1.6.6.jar}:\
-    ${file.reference.slf4j-nop-1.6.6.jar}:\
-    ${file.reference.spring-security-config-3.1.0.RELEASE.jar}:\
-    ${file.reference.spring-security-core-3.1.0.RELEASE.jar}:\
-    ${file.reference.spring-security-web-3.1.0.RELEASE.jar}:\
-    ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.ueditor-1.1.1.jar}:\
-    ${file.reference.wsdl4j-1.6.2.jar}:\
-    ${file.reference.xmlschema-core-2.0.jar}
+    ${file.reference.log4j-1.2.15.jar}:\
+    ${file.reference.mail.jar}:\
+    ${file.reference.nekohtml.jar}:\
+    ${file.reference.poi-3.9-20121203.jar}:\
+    ${file.reference.poi-excelant-3.9-20121203.jar}:\
+    ${file.reference.poi-ooxml-3.9-20121203.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.9-20121203.jar}:\
+    ${file.reference.poi-scratchpad-3.9-20121203.jar}:\
+    ${file.reference.pushlet-2.0.4.jar}:\
+    ${file.reference.servlet-api.jar}:\
+    ${file.reference.stax-api-1.0.1.jar}:\
+    ${file.reference.xalan.jar}:\
+    ${file.reference.xercesImpl.jar}:\
+    ${file.reference.xmlbeans-2.3.0.jar}:\
+    ${file.reference.xom-1.2.6.jar}:\
+    ${file.reference.httpclient-4.0.3.jar}:\
+    ${file.reference.httpcore-4.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -208,4 +142,5 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.dir=src
 src.web.dir=web
+src.web2.dir=web
 test.src.dir=test
